...
import com.android.sample.R
import com.android.sample.model.authentication.*
import com.android.sample.ui.theme.extendedColors

object SignInScreenTestTags {
  const val TITLE = "title"
  const val EMAIL_INPUT = "emailInput"
  const val PASSWORD_INPUT = "passwordInput"
  const val SIGN_IN_BUTTON = "signInButton"
  const val AUTH_GOOGLE = "authGoogle"
  const val SIGNUP_LINK = "signUpLink"
  const val FORGOT_PASSWORD = "forgotPassword"
  const val AUTH_SECTION = "authSection"
  const val SUBTITLE = "subtitle"
  const val RESEND_VERIFICATION = "resendVerification"
  const val PASSWORD_RESET_DIALOG = "passwordResetDialog"
  const val PASSWORD_RESET_EMAIL_INPUT = "passwordResetEmailInput"
...
