...
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.unit.dp
import androidx.compose.ui.window.PopupProperties
import com.android.sample.model.map.Location

object LocationInputFieldTestTags {
  const val INPUT_LOCATION = "inputLocation"
  const val ERROR_MSG = "errorMsg"

  const val SUGGESTION = "suggestLocation"
}

/**
...
